force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__RecurrenceCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecurrenceCount__c</fullName>
    <label>Recurrence Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecurrenceCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>