force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__rel_1718545869857_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545869857_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryCodeViolation_RegulatoryCo_rel</label>
    <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
    <relationshipLabel>RegulatoryCodeViolation_RegulatoryCo_rel</relationshipLabel>
    <relationshipName>rel_1718545869857_end</relationshipName>
    <type>Lookup</type>
</CustomField>