force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__rel_1718545876167_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545876167_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryCodeViolation_RelatedConte_rel</label>
    <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
    <relationshipLabel>RegulatoryCodeViolation_RelatedConte_rel</relationshipLabel>
    <relationshipName>rel_1718545876167_end</relationshipName>
    <type>Lookup</type>
</CustomField>