force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__RelatedContextId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedContextId__c</fullName>
    <label>Related Context</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedContextId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>