force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__ResolvedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResolvedDateTime__c</fullName>
    <label>Resolved Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResolvedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>