force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__ResponseObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseObject__c</fullName>
    <label>Response Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>