force-app/main/default/objects/ssot__RegulatoryCodeViolation__dlm/fields/ssot__ViolationTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ViolationTypeId__c</fullName>
    <label>Violation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ViolationTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>